# api-spec.json
@@ -23,7 +23,7 @@
                         "content": {
                             "*/*": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/SampleForm"
+                                    "$ref": "#/components/schemas/Sample"
                                 }
                             }
                         }
@@ -34,12 +34,12 @@
                 "tags": [
                     "sample-form-controller"
                 ],
-                "operationId": "post",
+                "operationId": "save",
                 "requestBody": {
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/SampleForm"
+                                "$ref": "#/components/schemas/Sample"
                             }
                         }
                     },
@@ -51,7 +51,7 @@
                         "content": {
                             "*/*": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/SampleForm"
+                                    "$ref": "#/components/schemas/Sample"
                                 }
                             }
                         }
@@ -62,9 +62,13 @@
     },
     "components": {
         "schemas": {
-            "SampleForm": {
+            "Sample": {
                 "type": "object",
                 "properties": {
+                    "id": {
+                        "type": "integer",
+                        "format": "int32"
+                    },
                     "string": {
                         "type": "string"
                     }
